[package]
name = "ethers-structopt"
version = "0.1.0"
edition = "2018"
authors = ["Georgios Konstantopoulos <me@gakonst.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/ethers-structopt"
repository = "https://github.com/gakonst/ethers-structopt"
homepage = "https://docs.rs/ethers-structopt"
description = """
Structopt derived ethers-rs types, useful for building Ethereum CLIs
"""

[dependencies]
structopt = "0.3.22"
ethers = "0.5.1"
color-eyre = "0.5.11"
